# AI-2024-2_Sem

ML Service Development/: .gitignore  README.md  docker-compose.yml  pyproject.toml  tox.ini
ML Service Development/configs/: models.json
ML Service Development/docker/client_service/: Dockerfile
ML Service Development/docker/frontend/: Dockerfile
ML Service Development/docker/model_service/: Dockerfile
ML Service Development/monitoring/grafana/: dashboard.json  grafana.ini
ML Service Development/monitoring/prometheus/: prometheus.yml
ML Service Development/notebooks/: syurpalov-base-research.ipynb
ML Service Development/src/client_service/: app.py
ML Service Development/src/client_service/core/entities/: __init__.py  model_request.py  model_response.py  user.py
ML Service Development/src/client_service/core/message_brokers/: __init__.py  i_message_broker.py
ML Service Development/src/client_service/core/repositories/: __init__.py
ML Service Development/src/client_service/core/repositories/model_repository/: __init__.py  i_model_repository.py
ML Service Development/src/client_service/core/repositories/model_repository/dto/: __init__.py  create_request_dto.py  (+1 more)
ML Service Development/src/client_service/core/repositories/user_repository/: __init__.py  i_user_repository.py
ML Service Development/src/client_service/core/services/: __init__.py  model_service.py  user_service.py
ML Service Development/src/client_service/core/services/interfaces/: __init__.py  i_model_service.py  i_user_service.py
ML Service Development/src/client_service/infrastructure/: utils.py
ML Service Development/src/client_service/infrastructure/controllers/: auth_controller.py  dependencies.py  model_controller.py  routers.py  user_controller.py
ML Service Development/src/client_service/infrastructure/db/entities/: __init__.py  model_request_entity.py  model_response_entity.py  user_entity.py
ML Service Development/src/client_service/infrastructure/db/mappers/: __init__.py  model_request_mapper.py  model_response_mapper.py  user_mapper.py
ML Service Development/src/client_service/infrastructure/db/repositories/: __init__.py  model_repository.py  user_repository.py
ML Service Development/src/client_service/infrastructure/message_brokers/: __init__.py  rabbitmq_broker.py
ML Service Development/src/frontend/: app.py
ML Service Development/src/model_service/: main.py
ML Service Development/src/model_service/core/models/: __init__.py  i_model.py  i_model_provider.py
ML Service Development/src/model_service/infrastructure/: utils.py
ML Service Development/src/model_service/infrastructure/models/: __init__.py  model.py  model_provider.py
ML Service Development/tests/: test_mock.py
RecSys/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
RecSys/.github/workflows/: tests.yml
RecSys/app/: main.py
RecSys/app/api/: endpoints.py
RecSys/app/core/: auth.py  middleware.py
RecSys/app/models/: dummy_recommender.py  knn_offline_recommender.py  lightfm_ann_recommender.py
RecSys/app/models/interfaces/: __init__.py  base_recommender.py
RecSys/app/schemas/api/: __init__.py  reco_response.py
RecSys/app/services/: model_registry.py
RecSys/notebooks/: train_model_hw3.ipynb  train_model_hw4.ipynb
RecSys/notebooks/hw_2/: metrics.ipynb
RecSys/notebooks/hw_3/: knn.ipynb
RecSys/notebooks/hw_4/: mf.ipynb
RecSys/tests/: test_endpoints.py
(+6 files in other folders)
