[project]
name = "app"
version = "0.0.1"
description = "ITMO Recsys Course"
authors = [
    { name = "Sergey Yurpalov", email = "" }
]
requires-python = "==3.10.*"
dependencies = [
    "fastapi==0.115.11",
    "httpx>=0.28.1",
    "implicit>=0.7.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "rectools>=0.12.0",
    "requests>=2.32.3",
    "uvicorn==0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "pytest-asyncio==0.25.3",
    "mypy==1.15.0",
    "flake8==7.1.2",
    "tox==4.24.2",
    "flake8-pyproject==1.2.3",
    "isort==6.0.1",
    "black==25.1.0",
]

[tool.pytest.ini_options]
addopts = "--cov=app"
testpaths = ["tests"]
markers = ["skip_tox"]

[tool.coverage.run]
omit = [
    "*/enums/*",
    "*/entities/*",
    "*/custom_typing/*",
    "__init__.py"
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod"
]
ignore_errors = true

[tool.mypy]
mypy_path = "app"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.flake8]
ignore = ['E231', 'E241']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 120
count = true
